RESOLVED FIXED108102
[Freetype] Cannot use characters outside the BMP
https://bugs.webkit.org/show_bug.cgi?id=108102
Summary [Freetype] Cannot use characters outside the BMP
Martin Robinson
Reported 2013-01-28 12:35:38 PST
It's slightly embarrassing that we haven't noticed this before now, but character outside the BMP are not rendered at all.
Attachments
Patch (38.73 KB, patch)
2013-01-28 15:45 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2013-01-28 15:45:18 PST
Carlos Garcia Campos
Comment 2 2013-01-29 09:07:48 PST
Comment on attachment 185086 [details] Patch LGTM, thanks!
WebKit Review Bot
Comment 3 2013-01-29 09:27:07 PST
Comment on attachment 185086 [details] Patch Clearing flags on attachment: 185086 Committed r141122: <http://trac.webkit.org/changeset/141122>
WebKit Review Bot
Comment 4 2013-01-29 09:27:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.