Source/WebCore/platform/graphics/freetype/FontCacheFreeType.cpp
@@ -26,6 +26,7 @@
 #include "OwnPtrCairo.h"
 #include "RefPtrCairo.h"
 #include "SimpleFontData.h"
+#include "UTF16UChar32Iterator.h"
 #include <cairo-ft.h>
 #include <cairo.h>
 #include <fontconfig/fcfreetype.h>
@@ -41,19 +42,18 @@ void FontCache::platformInit()
         ASSERT_NOT_REACHED();
 }
 
-FcPattern* createFontConfigPatternForCharacters(const UChar* characters, int length)
+FcPattern* createFontConfigPatternForCharacters(const UChar* characters, int bufferLength)
 {
     FcPattern* pattern = FcPatternCreate();
-
     FcCharSet* fontConfigCharSet = FcCharSetCreate();
-    for (int i = 0; i < length; ++i) {
-        if (U16_IS_SURROGATE(characters[i]) && U16_IS_SURROGATE_LEAD(characters[i])
-                && i != length - 1 && U16_IS_TRAIL(characters[i + 1])) {
-            FcCharSetAddChar(fontConfigCharSet, U16_GET_SUPPLEMENTARY(characters[i], characters[i+1]));
-            i++;
-        } else
-            FcCharSetAddChar(fontConfigCharSet, characters[i]);
+
+    UTF16UChar32Iterator iterator(characters, bufferLength);
+    UChar32 character = iterator.next();
+    while (character != iterator.end()) {
+        FcCharSetAddChar(fontConfigCharSet, character);
+        character = iterator.next();
     }
+
     FcPatternAddCharSet(pattern, FC_CHARSET, fontConfigCharSet);
     FcCharSetDestroy(fontConfigCharSet);
 
