Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp
@@ -39,6 +39,7 @@
 #include "FontCache.h"
 #include "FontDescription.h"
 #include "GlyphBuffer.h"
+#include "UTF16UChar32Iterator.h"
 #include <cairo-ft.h>
 #include <cairo.h>
 #include <fontconfig/fcfreetype.h>
@@ -102,18 +103,21 @@ PassRefPtr<SimpleFontData> SimpleFontData::createScaledFontData(const FontDescri
                                                         m_platformData.syntheticOblique()), isCustomFont(), false);
 }
 
-bool SimpleFontData::containsCharacters(const UChar* characters, int length) const
+bool SimpleFontData::containsCharacters(const UChar* characters, int bufferLength) const
 {
     ASSERT(m_platformData.scaledFont());
     FT_Face face = cairo_ft_scaled_font_lock_face(m_platformData.scaledFont());
     if (!face)
         return false;
 
-    for (int i = 0; i < length; i++) {
-        if (FcFreeTypeCharIndex(face, characters[i]) == 0) {
+    UTF16UChar32Iterator iterator(characters, bufferLength);
+    UChar32 character = iterator.next();
+    while (character != iterator.end()) {
+        if (!FcFreeTypeCharIndex(face, character)) {
             cairo_ft_scaled_font_unlock_face(m_platformData.scaledFont());
             return false;
         }
+        character = iterator.next();
     }
 
     cairo_ft_scaled_font_unlock_face(m_platformData.scaledFont());
